<resources>
    <string name="app_name" translatable="false">MUSICAI</string>
    <!--    splash screen    -->
    <string name="slogan"><b>나의 리듬을</b> 찾는 시간</string>
    <!--    onboarding screen-->
    <string name="signin">이미 회원이신가요?  로그인</string>
    <!--    login screen    -->
    <string name="signin_title">뮤직 AI에\n오신것을\n환영합니다.</string>
    <string name="forgotpassword">비밀번호를 잊으셨나요?</string>
    <string name="signup">아직 뮤직 AI의 회원이 아니신가요?  회원가입</string>
    <!--    result message screen    -->
    <string name="signup_success_title">가입을 축하드려요! \n이제 뮤직 AI와 \n함께해요 :)</string>
    <string name="reset_success_title">비밀번호가 \n성공적으로 \n변경되었어요!</string>
    <!--    signup screen-->
    <string name="signup_sub">처음 오셨군요?</string>
    <string name="signup_title">가입하고 시작해요!</string>
    <string name="static_name">닉네임</string>
    <string name="static_email">이메일</string>
    <string name="static_pw">비밀번호</string>
    <string name="static_repw">비밀번호 재확인</string>
    <string name="hint_name">닉네임을 입력해 주세요</string>
    <string name="hint_email">이메일을 입력해 주세요</string>
    <string name="hint_pw">비밀번호를 입력해 주세요</string>
    <string name="hint_repw">비밀번호를 한 번 더 입력해주세요</string>
    <string name="error_name">이 닉네임은 이미 있어요! 다른 걸로 해볼까요?</string>
    <string name="error_email">이 이메일은 이미 사용 중이에요.</string>
    <string name="error_pw">비밀번호가 너무 짧습니다. 최소 8자 이상이어야 합니다.</string>
    <string name="error_repw">비밀번호가 서로 달라요! 다시 입력해 주세요.</string>
    <!--   reset password screen   -->
    <string name="resetpw_title">비밀번호를\n잊어버리셨나요?</string>
    <string name="resetpw_sub">이메일로 비밀번호 변경 링크를 보내드려요.\n안 보이면 스팸함을 확인해주세요.</string>
    <!--    button message  -->
    <string name="back_to_login">로그인하러 가기</string>
    <string name="login">로그인하기</string>
    <string name="start">시작하기</string>
    <string name="next">다음</string>
    <string name="link">이메일로 링크 받을께요</string>
    <!--    desc    -->
    <string name="desc_back_to_login">로그인 화면으로 돌아가기</string>
    <string name="desc_logo">뮤직 AI에 어서오세요</string>
    <string name="title_activity_beat_visualizer_view">BeatVisualizerView</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>


</resources>